--- a/minimal-table.css
+++ b/minimal-table.css
@@ -348,65 +348,179 @@ template {
   display: none;
 }
 
+body {
+  display: flex;
+}
+
 .imageContainer {
+  background-image: url(/home/bjorn/repos/Sign-up-Form/joel-fulgencio-6g9BxgCNQv4-unsplash.jpg);
+  background-color: #cccccc;
+  background-size: cover;
   display:flex;
   flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  max-width: 500px;
-  height: 100%;
-}
-
-img {
-height: 100vh;
-width: 100%;
-}
-
-h2 {
-  color: #FBA5C7;
-  position: absolute;
-  bottom: 2%; 
-  left: 130px; 
-  text-align: center;
+  align-items: center;
   margin: 0;
-  font-size: medium;
+  height: 100vh;
+  width: 35vw;
+  position: relative;
 }
 
 .nameContainer {
   display: flex;
-  flex-flow: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  gap: 10px;
-  position: absolute;
-  top: 20%;
-  width: 500px;
-  height: 175px;
-}
-
-.logoImage {
-  position: absolute;
-  left: 35px;
-  height: 125px;
-  width: 125px;
-}
-
-@font-face {
-  font-family: osaka;
-  src: url(/home/bjorn/repos/Sign-up-Form/osaka-re.ttf);
-}
-
-h1 {
-  font-family: "osaka" ,Arial, Helvetica, sans-serif;
-  position: absolute;
-  right: 35px;
-  font-weight: bolder;
-  font-size: 75px;
+  height: 12vh;
+  width: 100%;
+  margin: 0;
+  position: relative;
+  top:19%;
+  gap: 20px;
+  border: 1px;
 }
 
 .logoBackground {
-  background-color: #FBA5C7;
-  opacity: 30%;
-  width: 500px;
-  height: 175px;
+  position: absolute;
+  top:19%;
+  background-color: black;
+  opacity: 35%;
+  height: 12vh;
+  width: 100%;
 }
+
+.logoImage {
+  display: flex;
+  align-items: center;
+  height: 6vw;
+  width: 6vw;
+  border: 5px;
+}
+
+@font-face {
+  font-family: "Osaka";
+  src: url(osaka-re.ttf);
+}
+
+h1 {
+  font-family: "Osaka", 'Courier New', Courier, monospace;
+  font-size: 4vw;
+}
+
+h2 {
+color: #DCF1F9;
+position: absolute;
+bottom: 1px;
+font-size: medium;
+text-align: center;
+}
+
+.bigP {
+font-family: Arial, Helvetica, sans-serif;
+font-size: 1.5vw;
+font-weight: bolder;
+width: 80%;
+padding-left: 5%;
+padding-top: 8%;
+}
+
+.medP {
+font-family: Arial, Helvetica, sans-serif;
+font-size: 1.5vw;
+font-weight: bolder;
+width: 80%;
+padding-left: 5%;
+}
+
+.smallP {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5vw;
+  font-weight: bolder;
+  width: 80%;
+  padding-left: 5%;
+  padding-top: 5%;
+  }
+
+form {
+  display: flex;
+  flex-flow: row wrap;
+  max-width: 70%;
+}
+
+  .firstName {
+    display: flex;
+    flex-direction: column;
+    width: 18vw;
+    padding-left: 7%;
+    padding-right: 7%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .9vw;
+    font-weight: normal;
+    letter-spacing: 0.1em
+  }
+
+  .lastName {
+    display: flex;
+    flex-direction: column;
+    width: 18vw;
+    padding-left: 7%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .9vw;
+    font-weight: normal;
+    letter-spacing: 0.1em
+  }
+
+  .email {
+    display: flex;
+    flex-direction: column;
+    width: 18vw;
+    padding-left: 7%;
+    padding-right: 7%;
+    padding-top: 3%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .9vw;
+    font-weight: normal;
+    letter-spacing: 0.1em
+  }
+
+  .phoneNum {
+    display: flex;
+    flex-direction: column;
+    width: 18vw;
+    padding-left: 7%;
+    padding-top: 3%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .9vw;
+    font-weight: normal;
+    letter-spacing: 0.1em
+  }
+
+  .password {
+    display: flex;
+    flex-direction: column;
+    width: 18vw;
+    padding-left: 7%;
+    padding-right: 7%;
+    padding-top: 3%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .9vw;
+    font-weight: normal;
+    letter-spacing: 0.1em
+  }
+
+  .confirmPassword {
+    display: flex;
+    flex-direction: column;
+    width: 18vw;
+    padding-left: 7%;
+    padding-top: 3%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .9vw;
+    font-weight: normal;
+    letter-spacing: 0.1em;
+  }
+
+  :focus{
+    outline: none;
+    border-color: blue;
+    border-radius: 5px;
+}
+
